small changes done

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -394,4 +394,4 @@ Alternatively if you want to just have a single hero
 
 </body>
 
-</html> -->
+</html>
